# Setup for the package

[metadata]
name = pyer-libs
version = 1.0.0
description = A package for Python code I hate rewriting
author = Erik Johnson

[options]
packages = find_namespace:

[options.entry_points]
console_scripts =
    erik = libs.__main__:main
pyer.commands =
    example = libs.example.__cmd__:ExampleCommand
